# telegram-openai-agentkit

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  __main__.py  commands.json
src/bot/: __init__.py  app.py  handlers.py
src/storage/: __init__.py  workflow_store.py
src/utils/: __init__.py  commands.py  config.py  logger.py
src/workflow/: __init__.py  loader.py  manager.py
